# streamly-metrics

./: README.md  streamly-metrics.cabal
dev/: README.md
eventlog/: Aggregator.hs  EventParser.hs  Main.hs
src/Streamly/: Metrics.hs
src/Streamly/KeyValue/: Type.hs
src/Streamly/Metrics/: Channel.hs  Console.hs  File.hs  Measure.hs  Perf.hs  RUsage.hsc  Type.hs
src/Streamly/Metrics/Channel/: Common.hs  Unbounded.hs
src/Streamly/Metrics/Perf/: RUsage.hsc  Type.hs
test/: EventParser.hs  Main.hs
