cabal-version:      2.2
name:               streamly-metrics
version:            0.1.0
synopsis:           Abstractions for collecting metrics
description:
  This library is about representing metrics in general, collecting,
  combining and processing them.

homepage:            https://streamly.composewell.com
bug-reports:         https://github.com/composewell/streamly-metrics/issues
license:             Apache-2.0
license-file:        LICENSE
tested-with:         GHC==8.0.2
                   , GHC==8.4.4
                   , GHC==8.6.5
                   , GHC==8.8.4
                   , GHC==8.10.4
                   , GHC==9.0.1
author:              Composewell Technologies
maintainer:          streamly@composewell.com
copyright:           2021 Composewell Technologies
category: Streamly
stability:           Experimental
build-type:          Simple

extra-doc-files:
    Changelog.md
    README.md
    dev/*.md

source-repository head
    type: git
    location: https://github.com/composewell/streamly-metrics

flag dev
  description: Development build
  manual: True
  default: False

flag fusion-plugin
  description: Use fusion plugin for benchmarks and executables
  manual: True
  default: False

-------------------------------------------------------------------------------
-- Common stanzas
-------------------------------------------------------------------------------

common compile-options
    default-language: Haskell2010

    ghc-options:      -Wall
                      -Wcompat
                      -Wunrecognised-warning-flags
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wnoncanonical-monad-instances
                      -Rghc-timing

    if flag(dev)
      ghc-options:    -Wmissed-specialisations
                      -Wall-missed-specialisations
                      -fno-ignore-asserts

common default-extensions
    default-extensions:
        BangPatterns
        CApiFFI
        CPP
        ConstraintKinds
        DeriveDataTypeable
        DeriveGeneric
        DeriveTraversable
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        TupleSections
        TypeApplications
        TypeFamilies
        ViewPatterns

        -- MonoLocalBinds, enabled by TypeFamilies, causes performance
        -- regressions. Disable it. This must come after TypeFamilies,
        -- otherwise TypeFamilies will enable it again.
        NoMonoLocalBinds

        -- UndecidableInstances -- Does not show any perf impact
        -- UnboxedTuples        -- interferes with (#.)

common optimization-options
    ghc-options: -O2
                 -fdicts-strict
                 -fspec-constr-recursive=16
                 -fmax-worker-args=16

common lib-options
  import: compile-options, optimization-options, default-extensions

common test-options
  import: compile-options, optimization-options, default-extensions
  ghc-options: -with-rtsopts -T

-------------------------------------------------------------------------------
-- Library
-------------------------------------------------------------------------------

library
    import: lib-options

    hs-source-dirs: src
    exposed-modules:
       Streamly.KeyValue.Type
     , Streamly.Metrics.Type
     , Streamly.Metrics.Perf
     , Streamly.Metrics.Perf.Type
     , Streamly.Metrics.Perf.RUsage
     , Streamly.Metrics.Channel
     , Streamly.Metrics.Channel.Unbounded
     , Streamly.Metrics.Channel.Common
     , Streamly.Metrics.Measure
     , Streamly.Metrics.File
     , Streamly.Metrics.Console

    build-depends:
       base >= 4.9 && < 5
     , pretty-show >= 1.10 && < 1.11
     , streamly == 0.9.0
     , streamly-core == 0.1.0
     , stm
     , containers  >= 0.6.5.1

test-suite basic
  import: test-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -O2 -fmax-worker-args=16 -fspec-constr-recursive=16
  build-depends:
       base >= 4.9 && < 5
     , streamly-metrics
     , streamly == 0.9.0
     , streamly-core == 0.1.0
     , stm

executable process-events
  hs-source-dirs: eventlog
  main-is: Main.hs
  other-modules: Aggregator, EventParser
  ghc-options: -Wall -O2 -fmax-worker-args=16 -fspec-constr-recursive=16
  -- -fplugin Fusion.Plugin
  build-depends:
       base >= 4.9 && < 5
     , containers
     , streamly == 0.9.0
     , streamly-core == 0.1.0
     , format-numbers
     , text
     -- , fusion-plugin
